--- a/LoRWatcher/Pages/MatchReports.razor
+++ b/LoRWatcher/Pages/MatchReports.razor
@@ -5,7 +5,8 @@
 @using System.Threading;
 @inject IWatcherDataStore watcherDataStore
 
-@if (matchReports == null)
+@if (matchReports == null &&
+     matchReportMetadata == null)
 {
     <p><em>Loading...</em></p>
 }
@@ -15,12 +16,12 @@ else
 
     <br />
 
-    <h4>Total Wins: @matchReports.Where(mr => mr.Result == true).Count()</h4>
-    <h4>Total Losses: @matchReports.Where(mr => mr.Result == false).Count()</h4>
+    <h4>Total Wins: @matchReportMetadata.TotalWins</h4>
+    <h4>Total Losses: @matchReportMetadata.TotalLosses</h4>
 
     <br />
 
-    <table class="table">
+    <table class="table table-hover">
         <thead>
             <tr>
                 <th>Finish Time</th>
@@ -69,13 +70,59 @@ else
             }
         </tbody>
     </table>
+    <nav aria-label="search match reports">
+        <ul class="pagination justify-content-center">
+            <li class="page-item">
+                <a class="page-link" href="javascript:void(0)" @onclick="@(async (e) => await UpdateTableAsync(this.activePage - 1))" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                    <span class="sr-only">Previous</span>
+                </a>
+            </li>
+            @for (var i = 1; i <= numOfPages; i++)
+            {
+                var pageNum = i;
+                var active = pageNum == this.activePage ? "active" : string.Empty;
+                <li class="page-item @active"><a class="page-link" href="javascript:void(0)" @onclick="@(async (e) => await UpdateTableAsync(pageNum))">@i</a></li>
+            }
+            <li class="page-item">
+                <a class="page-link" href="javascript:void(0)" @onclick="@(async (e) => await UpdateTableAsync(this.activePage + 1))" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 }
 
 @code {
-    IEnumerable<MatchReport> matchReports;
+    private MatchReportMetadata matchReportMetadata;
+
+    private IEnumerable<MatchReport> matchReports;
+
+    private int numOfPages { get; set; }
+
+    private int numOfRecords { get; set; } = 10;
+
+    private int activePage { get; set; } = 1;
 
     protected override async Task OnInitializedAsync()
     {
-        matchReports = await watcherDataStore.GetMatchReportsAsync(CancellationToken.None);
+        this.matchReportMetadata = await this.watcherDataStore.GetMatchReportMetadataAsync(CancellationToken.None);
+
+        this.numOfPages = Convert.ToInt32(Math.Ceiling((double)(this.matchReportMetadata.TotalGames / this.numOfRecords)));
+
+        await this.UpdateTableAsync(this.activePage);
+    }
+
+    private async Task UpdateTableAsync(int pageNum)
+    {
+        if (pageNum > 0 &&
+            pageNum <= this.numOfPages)
+        {
+            this.activePage = pageNum;
+            var skip = this.numOfPages * (this.activePage - 1);
+
+            this.matchReports = await this.watcherDataStore.GetMatchReportsAsync(skip, this.numOfRecords, CancellationToken.None);
+        }
     }
 }
