Converted to blazorise and broke pagination again

--- a/LoRWatcher/Pages/Index.razor
+++ b/LoRWatcher/Pages/Index.razor
@@ -1,5 +1,11 @@
 ﻿@page "/"
 
-<h1>LoR Watcher</h1>
+@using LoRWatcher.Caches
 
-Welcome to the LoR Watcher interface.
+@inject IGameStateCache gameStateCache
+
+<Container Fluid="true">
+    <h1>LoR Watcher</h1>
+
+    Welcome to the LoR Watcher interface.
+</Container>
