--- a/LoRWatcher/Pages/_Host.cshtml
+++ b/LoRWatcher/Pages/_Host.cshtml
@@ -20,20 +20,17 @@
     <link href="_content/Blazorise/blazorise.css" rel="stylesheet" />
     <link href="_content/Blazorise.Sidebar/blazorise.sidebar.css" rel="stylesheet" />
     <link href="_content/Blazorise.Material/blazorise.material.css" rel="stylesheet" />
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Material JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-    <script src="js/material.min.js"></script>
-
-    <script src="_content/Blazorise/blazorise.js"></script>
-    <script src="_content/Blazorise.Material/blazorise.material.js"></script>
 </head>
 <body>
     <app>
         @(await Html.RenderComponentAsync<App>(RenderMode.ServerPrerendered))
     </app>
+
+    <script src="_framework/blazor.server.js"></script>
+
+    <script src="js/material.min.js"></script>
+
+    <script src="_content/Blazorise/blazorise.js"></script>
+    <script src="_content/Blazorise.Material/blazorise.material.js"></script>
 </body>
 </html>
