--- a/LoRWatcher/Pages/_Host.cshtml
+++ b/LoRWatcher/Pages/_Host.cshtml
@@ -14,8 +14,8 @@
     <link href="css/material.min.css" rel="stylesheet">
 
     <!-- Add Material font (Roboto) and Material icon as needed -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i|Roboto+Mono:300,400,700|Roboto+Slab:300,400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="css/fonts.css" rel="stylesheet">
+    <link href="css/material.icons.css" rel="stylesheet">
 
     <link href="_content/Blazorise/blazorise.css" rel="stylesheet" />
     <link href="_content/Blazorise.Sidebar/blazorise.sidebar.css" rel="stylesheet" />
