--- a/LoRWatcher/Pages/_Host.cshtml
+++ b/LoRWatcher/Pages/_Host.cshtml
@@ -18,7 +18,6 @@
     <link href="css/material.icons.css" rel="stylesheet">
 
     <link href="_content/Blazorise/blazorise.css" rel="stylesheet" />
-    <link href="_content/Blazorise.Sidebar/blazorise.sidebar.css" rel="stylesheet" />
     <link href="_content/Blazorise.Material/blazorise.material.css" rel="stylesheet" />
 </head>
 <body>
@@ -28,6 +27,11 @@
 
     <script src="_framework/blazor.server.js"></script>
 
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Material JS -->
+    <script src="js/jquery-3.3.1.slim.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="js/material.min.js"></script>
 
     <script src="_content/Blazorise/blazorise.js"></script>
