--- a/LoRWatcher/Pages/_Host.cshtml
+++ b/LoRWatcher/Pages/_Host.cshtml
@@ -33,8 +33,10 @@
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/material.min.js"></script>
+    <script src="js/chart.js@2.8.0.js"></script>
 
     <script src="_content/Blazorise/blazorise.js"></script>
     <script src="_content/Blazorise.Material/blazorise.material.js"></script>
+    <script src="_content/Blazorise.Charts/blazorise.charts.js"></script>
 </body>
 </html>
