--- a/LoRWatcher/Pages/Index.razor
+++ b/LoRWatcher/Pages/Index.razor
@@ -20,14 +20,20 @@
                 <Row>
                     <div Class="col-4" Style="text-align: center">
                         <div>
-                            <a Class="text-black-hint">Total Games:</a> @(matchReportMetadata.TotalGames)
+                            <a Class="text-black-hint">Total Games:</a> @(matchReportMetadata.TotalGames) <a Class="text-black-hint" Style="font-size: 10px"><b>@(matchReportMetadata.TotalWins)W @(matchReportMetadata.TotalLosses)L</b></a>
                         </div>
                         <DoughnutChart @ref="winsLossesChart" TItem="int" />
                         <div Style="padding-top: 10px">
                             <a Class="text-black-hint">Win Rate:</a> @(this.GetWinRate())
                         </div>
                     </div>
-                    <div Class="col-4">
+                    <div Class="col-4" Style="margin: auto; text-align: center">
+                        <div>
+                            <a Class="text-black-hint">Most Played Region(s):</a> @(matchReportMetadata.MostPlayedRegions) <a Class="text-black-hint" Style="font-size: 10px"><b>@(matchReportMetadata.MostPlayedRegionsCount)G</b></a>
+                        </div>
+                        <div Style="padding-top: 10px">
+                            <a Class="text-black-hint">Highest Win Rate:</a> @(matchReportMetadata.HighestWinRateRegions) <a Class="text-black-hint" Style="font-size: 10px"><b>@(matchReportMetadata.HighestWinRateRegionsPercentage)%</b></a>
+                        </div>
                         <!-- Most used region(s). Highest win rate with region(s) exlcuding expeditions -->
                     </div>
                     <div Class="col-4">
